release: cut v0.53.5
